# eol-rebaser

./: .gitignore  LICENSE  README.md  eol-rebaser.spec  justfile  lefthook.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/: eol-rebaser.service  eol-rebaser.timer  migrations.conf
src/eol_rebaser/: bootc.py  config.py  main.py  migrator.py  notifications.py
tests/: __init__.py  test_eol_rebaser.py
tests/fixtures/: aurora_asus_surface_eol.yaml
